gbiblio-client (0.1) unstable; urgency=low

  * Initial Release.

 -- Javier Hernández Antúnez <jhernandez@emergya.es>  Tue, 14 Oct 2008 17:16:17 +0200