@@ -1,0 +1,16 @@
+#!/bin/sh
+# postinst script for gbiblio-client
+#
+# see: dh_installdeb(1)
+
+set -e
+
+# Adding user biblio
+adduser biblio --disabled-password --gecos biblio
+chpasswd -m <<EOF
+biblio:biblio
+EOF
+
+exit 0
+
+
